--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chance": "^1.1.7",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
+    "express-session": "^1.17.1",
     "express-useragent": "^1.0.15",
     "helmet": "^4.1.1",
     "http-errors": "^1.8.0",
+    "moment": "^2.29.0",
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "pug": "^3.0.0"
   },
   "devDependencies": {
