--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "express-useragent": "^1.0.15",
     "helmet": "^4.1.1",
     "http-errors": "^1.8.0",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.29.0",
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.11",
     "pug": "^3.0.0"
   },
   "devDependencies": {
