added pdf generator

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.0",
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
+    "pdfkit": "^0.11.0",
     "pug": "^3.0.0"
   },
   "devDependencies": {
